# Telco-Customer-Churn-ML

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dockerfile  metrics_baseline.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
notebooks/: telco_churn_end_to_end.ipynb
scripts/: check_metrics.py  deploy_hf.py  drift_report.py  fetch_data.py  promote_model.py  register_model.py  run_pipeline.py
src/app/: main.py
src/features/: pipeline.py
src/models/: registry.py  threshold.py  tune.py
src/serving/: inference.py  monitoring.py
src/utils/: validate_data.py
tests/: conftest.py  test_behavioral.py  test_cleaning.py  test_inference.py  test_monitoring.py  test_pipeline.py  test_threshold.py  test_validation.py
